Add index page formatting and content

--- a/index.html
+++ b/index.html
@@ -1,6 +1,90 @@
-<html>
-  <body>
-    <h1>You really like the smell of your own farts, don't you?</h1>
+<html dir="ltr" lang="en" class="Home Index">
+	<shadow>
+		<head>
+		<body>
+	</shadow>
+	<style></style>
+  <head>
+    <link rel="stylesheet" type="text/css" href="css/application-rtl.min.css">
+    <link rel="stylesheet" type="text/css" href="css/toolkit-ltr.min.css">
+    <link rel="stylesheet" type="text/css" href="css/toolkit-rtl.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Cairo" rel="stylesheet">
+  </head>
+  <body class="with-top-navbar">
+  	<div class="growl" id="app-growl"></div>
+  	<nav dir="ltr" class="navbar navbar-inverse navbar-fixed-top app-navbar">
+  		<div dir="ltr" class="container">	
+  			<div class="navbar-header">			
+	  			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-main">
+	  				<span class="sr-only">Menu</span>
+	  				<span class="icon-bar"></span>
+	  				<span class="icon-bar"></span>
+	  				<span class="icon-bar"></span>
+  				</button>
+  				<a href="https://www.thesmellofyourownfarts.com" class="navbar-brand">
+  					<span>
+  					  	<span class="hidden-sm hidden-xs hidden-xxs">the smell of your own farts</span>
+  						<img style="padding-bottom:7px;" src="img/logo.png">
+  					</span>
+  				</a>
+  				<div class="col-xs-3"></div>
+  			</div>
+  			<div class="navbar-collapse collapse" id="navbar-collapse-main">
+  				<ul class="nav navbar-nav navbar-right">
+  					<li>
+  						<a href="">Register</a>
+  					</li>
+  					<li>
+  						<a href="">Login</a>
+  					</li>
+  					<li>
+  						<a href="">About Us</a>
+  					</li>
+  					<li>
+  						<a href="">Contact Us</a>
+  					</li>
+  				</ul>
+  			</div>
+  		</div>
+  	</nav>
+  	<div class="container container-mobile p-t-md">
+  		<div class="row">
+  			<div class="col-md-12">
+  				"Get honest feedback from yourself"
+  				<br>
+  				<br>
+  			</div>
+  		</div>
+  		<div class="row">
+  			<div class="col-md-6">
+  				<h4>Toot your own horn</h4>
+  					<li>Stroke your ego with the perfect complement</li>
+  					<li>Validate yourself</li>
+  			</div>
+  			<div class="col-md-6">
+  				<h4>Feel good</h4>
+  					<li>Take all bad feelings away</li>
+  					<li>Turn them into nice feelings</li>
+  			</div>
+  		</div>
+  		<br>
     <h2>You've come to the right place to toot your own horn...coming soon.</h2>
+    <footer class="center-block">
+    	<div class="container">
+    		<div class="row">
+    			<div class="col-xs-12 col-sm-5 col-md-4 col-lg-4">
+    				<div class="copyright">
+    					<span class="social">
+    					The Smell of Your Own Farts 2017
+    						<a href= "http://www.twitter.com/smellofyourfart">
+    							<img src="img/twitter.png">
+    						</a>
+    					</span>
+    				</div>
+    			</div>
+    		</div>
+    	</div>
+    </footer>
+    <script src="/jh/toolkit.min.js"></script>
   </body>
 </html>
