Attempt to fix broken logo

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   				<a href="https://www.thesmellofyourownfarts.com" class="navbar-brand">
   					<span>
   					  	<span class="hidden-sm hidden-xs hidden-xxs">the smell of your own farts</span>
-  						<img style="padding-bottom:7px;" src="img/logo.png">
+  						<img style="padding-bottom:7px;" src="img/Logo.png">
   					</span>
   				</a>
   				<div class="col-xs-3"></div>
