--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 	</shadow>
 	<style></style>
   <head>
+  	<meta charset="utf-8">
+  	<meta http-equiv="X-UA Compatible" content="IE=edge">
+  	<title>The Smell of Your Own Farts </title>
     <link rel="stylesheet" type="text/css" href="css/application-rtl.min.css">
     <link rel="stylesheet" type="text/css" href="css/toolkit-ltr.min.css">
     <link rel="stylesheet" type="text/css" href="css/toolkit-rtl.min.css">
