--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <head>
   	<meta charset="utf-8">
   	<meta http-equiv="X-UA Compatible" content="IE=edge">
+  	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
   	<title>The Smell of Your Own Farts </title>
     <link rel="stylesheet" type="text/css" href="css/application-rtl.min.css">
     <link rel="stylesheet" type="text/css" href="css/toolkit-ltr.min.css">
