--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   			<div class="navbar-collapse collapse" id="navbar-collapse-main">
   				<ul class="nav navbar-nav navbar-right">
   					<li>
-  						<a href="">Register</a>
+  						<a href="/Account/Register">Register</a>
   					</li>
   					<li>
   						<a href="">Login</a>
