Fixed issue with index page footer not centering text

--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <html dir="ltr" lang="en" class="Home Index">
-	<shadow>
-		<head>
-		<body>
-	</shadow>
-	<style></style>
   <head>
   	<meta charset="utf-8">
   	<meta http-equiv="X-UA Compatible" content="IE=edge">
@@ -70,25 +65,39 @@
   					<li>Take all bad feelings away</li>
   					<li>Turn them into nice feelings</li>
   			</div>
+        <br>
+        <div class="row">
+          <div class="col-md-12">
+            <a style="font-weight:bold" href="/Account/Register">Register</a>
+             | 
+            <a style="font-weight:bold" href="/Account/Login">Login</a>
+          </div>
+        </div>
   		</div>
+    </div>
   		<br>
-    <h2>You've come to the right place to toot your own horn...coming soon.</h2>
-    <footer class="center-block">
+    <div class="center-block">
+      <h2>You've come to the right place to toot your own horn...coming soon.</h2>
+    </div>
+    <footer dir="ltr" class="center-block">
     	<div class="container">
     		<div class="row">
-    			<div class="col-xs-12 col-sm-5 col-md-4 col-lg-4">
+    			<div class="">
     				<div class="copyright">
+              The Smell of Your Own Farts 2017 ©
     					<span class="social">
-    					The Smell of Your Own Farts 2017
     						<a href= "http://www.twitter.com/smellofyourfart">
     							<img src="img/twitter.png">
     						</a>
     					</span>
+              <a href="/Home/Privacy">Privacy</a>
+              -
+              <a href="/Home/Terms">Terms</a>
     				</div>
     			</div>
     		</div>
     	</div>
     </footer>
-    <script src="/jh/toolkit.min.js"></script>
+    <script src="/js/toolkit.min.js"></script>
   </body>
 </html>
