--- a/Account/Register.html
+++ b/Account/Register.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html dir="rtl" class="Account Register">
+<html dir="ltr" class="Account Register">
 	<head prefix="og: http://ogp.me/ns#">
-	  	<meta charset="utf-8">
-	  	<meta http-equiv="X-UA Compatible" content="IE=edge">
-	  	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-	  	<title>The Smell of Your Own Farts </title>
-	    <link rel="stylesheet" type="text/css" href="../css/application-rtl.min.css">
-	    <link rel="stylesheet" type="text/css" href="../css/toolkit-ltr.min.css">
-	    <link rel="stylesheet" type="text/css" href="../css/toolkit-rtl.min.css">
-	    <link href="https://fonts.googleapis.com/css?family=Cairo" rel="stylesheet">
+  	<meta charset="utf-8">
+  	<meta http-equiv="X-UA Compatible" content="IE=edge">
+  	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+  	<title>The Smell of Your Own Farts </title>
+    <link rel="stylesheet" type="text/css" href="../css/application-rtl.min.css">
+    <link rel="stylesheet" type="text/css" href="../css/toolkit-ltr.min.css">
+    <link rel="stylesheet" type="text/css" href="../css/toolkit-rtl.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Cairo" rel="stylesheet">
+    <link rel="icon" src="~/img/favicon.png">
 	</head>
 	<body class="with-top-navbar" style>
 		<div class="growl" id="app-growl"></div>
